--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "author": "ryan3780 <guemhong3780@gmail.com>",
   "scripts": {
-    "start": "tsc-watch --onSucecess \" node dist/index.js\" ",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   },
   "devDependencies": {
     "tsc-watch": "^2.1.2"
+  },
+  "dependencies": {
+    "typescript": "^3.3.3333"
   }
 }
